# corrosion-engineering-mcp

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  BUG_LIST.md  CODEX_REVIEW_ACTIONS.md  CODEX_REVIEW_FIXES_COMPLETE.md  CODEX_REVIEW_PHASE1.md  COMPLETE_SESSION_SUMMARY.md  CSV_LOADERS_IMPLEMENTATION.md  HARDCODED_DATA_REPLACEMENT_PLAN.md  IMPLEMENTATION_ROADMAP.md  MANIFEST.in  MCP_CONFIGURATION.md  NRL_INTEGRATION_SUMMARY.md  PHASE1_COMPLETE.md  PHASE2_CRITICAL_FIXES_SUMMARY.md  PHASE3_ELECTROCHEMICAL_PITTING.md  PRIORITY_2_COMPLETE.md  PRIORITY_3_4_COMPLETE.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  QUICK_WINS_SUMMARY.md  README.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2025-10-19.md  pyproject.toml  requirements.txt  server.py
core/: __init__.py  chemistry_backend.py  galvanic_backend.py  interfaces.py  localized_backend.py  phreeqc_adapter.py  schemas.py  state_container.py
data/: __init__.py  astm_g48_cpt_data.csv  astm_g82_galvanic_series.csv  authoritative_materials_data.py  csv_loaders.py  iso18070_chloride_thresholds.csv  iso18070_temperature_coefficients.csv  materials_compositions.csv  norsok_internal_corrosion.py  nrl_galvanic_series.py  nrl_polarization_curves.py  orr_diffusion_limits.csv
databases/: README.md  __init__.py  coating_permeability.yaml  electrochemistry.yaml
docs/: CODEX_ARCHITECTURAL_IMPROVEMENTS.md  CODEX_RED_FLAGS_RESOLVED.md  CODEX_REVIEW_PHASE0.md  CRITICAL_BUG_FIXES_2025-10-20.md  JSON_SCHEMA.md  PHASE0_COMPLETE.md  PHASE1_PROGRESS.md  PHASE2_REDOX_STATE_RESEARCH.md  POURBAIX_PHREEQC_ROADMAP.md  SEMANTIC_SEARCH_FINDINGS.md  THERMODYNAMIC_VS_MEASURED_EH.md  TIER1_VS_TIER2_PITTING_GUIDE.md
scripts/: README.md  extract_coating_data.py  extract_electrochemistry_data.py  extract_pitting_resistance_data.py
tests/: __init__.py  test_chemistry_backend.py  test_chemistry_tools.py  test_coating_permeability_db.py  test_critical_fixes.py  test_cross_validation_degasser.py  test_csv_loaders.py  test_electrochemistry_db.py  test_galvanic_corrosion.py  test_localized_corrosion.py  test_mass_transfer.py  test_material_database.py  test_norsok_wrappers.py  test_phase1_tools.py  test_phase2_galvanic.py  test_phase3_pitting_integration.py  test_redox_state.py
tools/: __init__.py
tools/chemistry/: __init__.py  calculate_pourbaix.py  langelier_index.py  predict_scaling.py  run_speciation.py
tools/handbook/: __init__.py  material_screening.py  mechanism_guidance.py  typical_rates.py
utils/: __init__.py  coating_permeability_db.py  electrochemistry_db.py  mass_transfer.py  material_database.py  nacl_solution_chemistry.py  nrl_constants.py  nrl_electrochemical_reactions.py  nrl_materials.py  oxygen_solubility.py  pitting_assessment.py  redox_state.py
validation/: README.md  __init__.py  norsok_benchmarks.py  nrl_experiments.py  ohio_u_datasets.py  run_validation.py
(+7 files in other folders)
